You can now add links to the start page and remove them. NEED TO: remove links immediately and fix alignment issues

--- a/src/LinkGrid.css
+++ b/src/LinkGrid.css
@@ -10,4 +10,5 @@
   padding: 20px;
   font-size: 30px;
   text-align: center;
+  background-color: darkslategrey;
 }
